scss lint fixes

--- a/assets/sass/navbar.scss
+++ b/assets/sass/navbar.scss
@@ -7,7 +7,7 @@
   }
 }
 .navbar-reefpi .navbar-brand {
-  color: #FFF;
+  color: #fff;
 }
 /* change the brand and text color */
 .navbar-reefpi
@@ -21,5 +21,5 @@
 /* change the color of active or hovered links */
 .navbar-reefpi .nav-item.active .nav-link,
 .navbar-reefpi .nav-item:hover .nav-link {
-  color: #ffffff;
+  color: #fff;
 }
