--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -16,7 +16,7 @@
 }
 
 .bottom-bar {
-  border-top: solid 1px #CCC;
+  border-top: solid 1px #ccc;
 }
 
 html {
@@ -37,8 +37,8 @@ html {
   margin-bottom: 10px;
 }
 
-input[type=number].no-spinner::-webkit-inner-spin-button,
-input[type=number].no-spinner::-webkit-outer-spin-button {
+input[type="number"].no-spinner::-webkit-inner-spin-button,
+input[type="number"].no-spinner::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
